lager-lang/examples/good/03-01-assignment.lg
int main() {
    int x;
    print(x); // 0
    x = 5;
    print(x); // 5
    x = x * 3;
    print(x); // 15
    
    return 0;
}
