lager-lang/examples/bad/break_outside.lg
int main() {
    break; // compile error
    
    return 0;
}